# Navi24W2

./: .gitignore  README.md  environment.yml  todo.md
arm/: RealPointDriving.md  bug_algorithm.py  models.py  potential_field.py  run_algorithm.py  smaller_task1.py  task1.py  task3.py  toy_maze.py  value_iteration.py
arm/continuous_env/: README.md  pyproject.toml
arm/continuous_env/continuous_env/: log.py  policy.py  q_learn.py  robot_obstacles.py
arm/continuous_env/util/: maze_generator.py
arm/fundamentals/: bug_algorithm.py  rl_q_learning.py  run_algorithm.py  smaller_experiences.txt
filip_canak_rrt/: detector.py  map1.csv  map1.xlsm  noise.avi  realistic_drive.py  robot.py  rrt_algorithm.py  vector.py
finn/Docs/: IsaacSim.md
finn/Gazebo/: Dockerfile  Dockerfile.old  README.md  bashrc  compose.yaml  enter.sh  gazebo_launcher.py
finn/Gazebo/.devcontainer/: devcontainer.json  docker-compose.yml
finn/Gazebo/.devcontainer_old/: devcontainer.json
finn/Gazebo/Worlds/: GZMovingRobot.sdf  MovingRobot.sdf  MovingRobotAckermann.sdf  World.sdf  WorldGZ.sdf  sensor_tutorial.sdf
finn/Gazebo/workspace/: movingrobot.yaml  start_bridge.sh
linus_ackerman_rrt/: ackerman_rrt.md  ackerman_rrt.py  test_ackerman_rrt.py
sayyam/continuous_env/: Notes.md  README.md
sayyam/continuous_env/continuous_env/: policy.py  q_learn.py  robot_obstacles.py
sayyam/fundamentals/: experiences.txt
vishal_rrt/: LANEDETECT.md  Map.md  README.md  create_map.py  detect_edge.py  lane_detect.py  lane_detection.py  main.py  map.npy  rrt.py
