[project]
name = "continuous-env"
version = "0.1.0"
description = "Sim for RL"
authors = [
    {name = "Arman D",email = "adrismir@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d (>=2.3.10,<3.0.0)",
    "gymnasium (>=1.1.0,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
